# chans_algorithm

./: .gitignore  Cargo.toml  README.md
config/: log4rs.yaml
plotting/: chan_visuals.py
src/: io.rs  lib.rs  main.rs
src/util/: chan.rs  graham.rs  mod.rs
static/: hull.csv  points_init.csv
